--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ParameterDisplayTabWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ParameterDisplayTabWidget.fxml
@@ -31,6 +31,8 @@
   ~ limitations under the License.
   -->
 
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ParameterDisplayTabWidgetController">
  <children>
     <ToolBar maxWidth="1.7976931348623157E308" minWidth="1.0" prefHeight="32.0">
@@ -44,7 +46,15 @@
           <Label text=" " />
           <ProgressIndicator fx:id="progressIndicator" prefHeight="25.0" prefWidth="25.0" visible="false" />
           <Label text=" " />
-          <Button fx:id="printBtn" mnemonicParsing="false" onAction="#printButtonSelected" text="Print..." />
+          <Button fx:id="printBtn" mnemonicParsing="false" onAction="#printButtonSelected">
+              <graphic>
+                  <ImageView pickOnBounds="true" preserveRatio="true">
+                      <image>
+                          <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/printer.svg.png" />
+                      </image>
+                  </ImageView>
+              </graphic>
+          </Button>
        </items>
     </ToolBar>
     <TableView fx:id="dataItemTableView" fixedCellSize="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" onDragDropped="#onDragDropped" onDragEntered="#onDragEntered" onDragExited="#onDragExited" onDragOver="#onDragOver" VBox.vgrow="ALWAYS">
