Definition parameter setting completed

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityInvocationDialog.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityInvocationDialog.fxml
@@ -36,7 +36,7 @@
 <?import javafx.scene.control.ComboBox?>
 <VBox prefWidth="650.0" spacing="8.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ActivityInvocationDialogController">
    <children>
-      <HBox VBox.vgrow="NEVER">
+      <HBox VBox.vgrow="NEVER" spacing="8.0">
          <children>
             <Label prefWidth="120.0" text="Activity" />
             <Label fx:id="activityLabel" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
@@ -46,7 +46,7 @@
             </Label>
          </children>
       </HBox>
-       <HBox VBox.vgrow="NEVER">
+       <HBox VBox.vgrow="NEVER" spacing="8.0">
            <children>
                <Label prefWidth="120.0" text="Type" />
                <Label fx:id="typeLabel" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
@@ -58,12 +58,6 @@
        </HBox>
       <Label fx:id="descriptionLabel" wrapText="true" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
       <Separator prefWidth="200.0" />
-      <HBox VBox.vgrow="NEVER">
-         <children>
-            <Label prefWidth="120.0" text="Selected Route" />
-            <ComboBox fx:id="routeChoiceBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
-         </children>
-      </HBox>
       <Accordion fx:id="accordion" VBox.vgrow="ALWAYS">
         <panes>
           <TitledPane animated="false" text="Arguments">
@@ -109,6 +103,13 @@
         </panes>
       </Accordion>
       <Separator prefWidth="200.0" />
+       <HBox VBox.vgrow="NEVER">
+           <children>
+               <Label prefWidth="120.0" text="Selected Route" />
+               <ComboBox fx:id="routeChoiceBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
+           </children>
+       </HBox>
+       <Separator prefWidth="200.0" />
       <HBox spacing="8.0">
          <children>
             <Region HBox.hgrow="ALWAYS" />
