Start activity view implementation almost finished (retrieval done)

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityDataFilterWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityDataFilterWidget.fxml
@@ -47,7 +47,7 @@
             <Tooltip text="Comma-separated values" />
          </tooltip>
       </TextField>
-      <CheckBox fx:id="activityPathCheckbox" mnemonicParsing="false" text="Event Path" />
+      <CheckBox fx:id="activityPathCheckbox" mnemonicParsing="false" text="Activity Path" />
       <TextField fx:id="activityPathText">
          <tooltip>
             <Tooltip text="Comma-separated values" />
