--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/OperationalMessageView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/OperationalMessageView.fxml
@@ -46,7 +46,15 @@
                   <Label text=" " />
                   <ProgressIndicator fx:id="progressIndicator" prefHeight="25.0" prefWidth="25.0" visible="false" />
                   <Label maxWidth="1.7976931348623157E308" minWidth="5.0" text=" " />
-                  <Button fx:id="filterBtn" mnemonicParsing="false" onAction="#filterButtonSelected" text="Filter..." />
+                   <Button fx:id="filterBtn" mnemonicParsing="false" onAction="#filterButtonSelected">
+                       <graphic>
+                           <ImageView pickOnBounds="true" preserveRatio="true">
+                               <image>
+                                   <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/filter.svg.png" />
+                               </image>
+                           </ImageView>
+                       </graphic>
+                   </Button>
                    <Button fx:id="printBtn" mnemonicParsing="false" onAction="#printButtonSelected">
                        <graphic>
                            <ImageView pickOnBounds="true" preserveRatio="true">
