--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SetParameterDialog.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SetParameterDialog.fxml
@@ -1,19 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
 <!--
   ~ Copyright (c)  2020 Dario Lucia (https://www.dariolucia.eu)
   ~
@@ -30,9 +16,11 @@
   ~ limitations under the License.
   -->
 
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.ToggleSwitch?>
 <VBox prefWidth="650.0" spacing="8.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.SetParameterDialogController">
    <children>
@@ -50,6 +38,45 @@
       <Separator prefWidth="200.0" />
       <VBox fx:id="valueVBox" prefWidth="600.0" spacing="8.0">
       </VBox>
+      <Separator prefWidth="200.0" />
+      <Accordion fx:id="accordion" VBox.vgrow="ALWAYS">
+         <panes>
+            <TitledPane animated="false" text="Properties">
+               <content>
+                  <HBox spacing="8">
+                     <TableView fx:id="propertiesTableView" editable="true" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" >
+                        <columns>
+                           <TableColumn fx:id="keyColumn" prefWidth="180.0" sortable="false" text="Key" />
+                           <TableColumn fx:id="valueColumn" prefWidth="180.0" sortable="false" text="Value" />
+                        </columns>
+                     </TableView>
+                     <VBox spacing="8">
+                        <children>
+                           <Button mnemonicParsing="false" prefWidth="18.0" prefHeight="18.0" onAction="#addPropertyClicked">
+                              <graphic>
+                                 <ImageView pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                       <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/plus-circle.svg.png" />
+                                    </image>
+                                 </ImageView>
+                              </graphic>
+                           </Button>
+                           <Button mnemonicParsing="false" prefWidth="18.0" prefHeight="18.0" onAction="#removePropertyClicked">
+                              <graphic>
+                                 <ImageView pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                       <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/minus-circle.svg.png" />
+                                    </image>
+                                 </ImageView>
+                              </graphic>
+                           </Button>
+                        </children>
+                     </VBox>
+                  </HBox>
+               </content>
+            </TitledPane>
+         </panes>
+      </Accordion>
       <Separator prefWidth="200.0" />
       <HBox VBox.vgrow="NEVER" spacing="8.0">
          <children>
